<resources>
    <string name="app_name">Far On Droid</string>
    <string name="btn_alt">Alt</string>
    <string name="btn_menu">Menu</string>
    <string name="btn_new">New</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="btn_dont_ask">Don\'t ask again</string>
    <string name="btn_skip">Skip</string>
    <string name="btn_save">Save</string>
    <string name="btn_select">Select</string>
    <string name="btn_replace">Replace</string>
    <string name="btn_settings">Settings (F11)</string>
    <string name="btn_encoding">Encoding</string>
    <string name="btn_back">Back</string>
    <string name="btn_next">Next</string>
    <string name="btn_finish">Finish</string>
    <string name="folder">Folder</string>
    <string name="virtual_folder">Virtual Folder</string>
    <string name="archive">Archive</string>
    <string name="folder_root">Root</string>
    <string name="folder_up">Up</string>
    <string name="dialog_actions">Actions</string>
    <string name="canceled">Canceled by user</string>
    <string name="new_file">File</string>
    <string name="new_folder">Directory</string>
    <string name="last_modified">Last Modified</string>
    <string name="permissions">Permissions</string>
    <string name="size">File Size</string>
    <string name="error">Error</string>
    <string name="error_enter_name">Enter new name</string>
    <string name="error_destination_empty">Destination path can\'t be empty</string>
    <string name="error_unknown_unexpected_error">An unknown error has occurred. Previous action is canceled.</string>
    <string name="error_cannot_create_file">Can\'t create file or folder \n\n %s</string>
    <string name="error_cannot_delete_files">Can\'t delete selected file (s)</string>
    <string name="error_cannot_rename_files">Can\'t rename selected file</string>
    <string name="error_cannot_move_files">Can\'t move selected file (s)</string>
    <string name="error_cannot_copy_files">Can\'t copy selected file (s) to %s</string>
    <string name="error_cannot_copy_files_to_the_same_folder">Can\'t copy selected file (s) to the same directory</string>
    <string name="error_cannot_open_file">Can\'t open file</string>
    <string name="error_open_archive">Error while opening archive.</string>
    <string name="error_no_app_to_open_file">No application can be found to open this file</string>
    <string name="error_file_is_too_big">File is too big. Only \'View\' mode is available</string>
    <string name="error_output_directory_doesnt_exists">Output directory doesn\'t exist or can\'t be created</string>
    <string name="error_file_already_exists">File already exists</string>
    <string name="error_create_archive_files_tree">Can\'t create archive files tree. Archive seems to be broken.</string>
    <string name="error_extract_archive_files">Can\'t extract archive files.</string>
    <string name="error_virtual_directories_not_permitted">Operations with virtual directories not permitted.</string>
    <string name="error_create_bookmark">Can\'t create bookmark. Probably, bookmark with this label already exists.</string>
    <string name="error_enter_label">Enter bookmark label</string>
    <string name="error_archive_operation_not_supported">This operation is not supported with archives</string>
    <string name="error_network_operation_not_supported">Currently this operation is not supported with networks clouds.</string>
    <string name="error_no_selected_file">No selected file. You must select file first.</string>
    <string name="error_ar_archive_too_long_name">Too long name for ar archive. Max file name length is 16 (including file extension).</string>
    <string name="error_enter_archive_name">Enter archive name</string>
    <string name="error_create_archive">Error while creating archive file</string>
    <string name="error_quick_view_operation_not_supported">Operations \'Copy\'/\'Move\'/\'Create archive\' not supported with Quick View.</string>
    <string name="error_open_file">Error while opening file</string>
    <string name="error_quick_view_error_while_calculating_detailes">Error while calculating folder details: %s</string>
    <string name="error_quick_view_null_file">Can\'t read directory</string>
    <string name="error_account_unlinked">Network account is unlinked. Most likely this happens because your authentication tokens were expired. Panel will be closed. Delete this account?</string>
    <string name="error_account_auth_expired">Authentication token for this account has been expired. Account will be deleted</string>
    <string name="error_io_error">Network IO error. Please, try again.</string>
    <string name="error_canceled">Operation canceled. Please, try again.</string>
    <string name="error_common">Unrecognized network error. Please, try again.</string>
    <string name="error_network_quota">Dropbox was unable to complete this action because of a storage quota limit.</string>
    <string name="error_getting_account_info">Unrecognized error occurred while receiving account info.</string>
    <string name="error_account_expired">Provided authorization grant is invalid, expired or revoked.</string>
    <string name="error_search_not_supported">Search is not supported for %s.</string>
    <string name="error_diff_not_supported">Diff is supported for local file systems only.</string>
    <string name="error_ftp_connection_closed">FTP connection is closed. Please, try again.</string>
    <string name="error_socket_timeout_exception">Network request timeout. Try again?</string>
    <string name="error_inactive_panel_is_busy">Inactive panel is busy.</string>
    <string name="error_cant_open_intent">This application can\'t be opened.</string>
    <string name="error_export_as">Error while exporting file.</string>
    <string name="action_info">Info</string>
    <string name="action_send">Send</string>
    <string name="action_share_to">Share file to</string>
    <string name="action_copy">Copy</string>
    <string name="action_edit">Edit</string>
    <string name="action_view">View</string>
    <string name="action_delete">Delete</string>
    <string name="action_move">Move</string>
    <string name="action_rename">Rename</string>
    <string name="action_open_with">Open With</string>
    <string name="action_open_as">Open As</string>
    <string name="action_select_network">Select Network</string>
    <string name="action_archive_extract">Extract Archive</string>
    <string name="action_create_archive">Create Archive</string>
    <string name="action_enter_password">Enter password</string>
    <string name="action_select_account">Select Account</string>
    <string name="action_open">Open</string>
    <string name="action_set_as_home">Set current path as Home</string>
    <string name="action_share">Share</string>
    <string name="action_copy_path">Copy path</string>
    <string name="path_copied">Path to file/directory copied to clipboard</string>
    <string name="information">Information</string>
    <string name="destination">Destination</string>
    <string name="archive_name">Archive name</string>
    <string name="archive_password">Password</string>
    <string name="archive_compression">Compression</string>
    <string name="make_folder">Make folder</string>
    <string name="create_new">Create new</string>
    <string name="new_file_name">File/Directory name</string>
    <string name="delete_files">Delete selected file(s)?</string>
    <string name="move_files">Move files/directories to</string>
    <string name="rename_file">Rename to</string>
    <string name="copy_files">Copy files/directories to</string>
    <string name="archive_extract_to">Extract archive files to</string>
    <string name="btn_quick_view">Quick View</string>
    <string name="btn_diff">Diff</string>
    <string name="btn_find">Find</string>
    <string name="btn_network">Network</string>
    <string name="btn_goto">Goto</string>
    <string name="btn_more">More</string>
    <string name="btn_tools">Tools</string>
    <string name="btn_help">Help (F10)</string>
    <string name="line_number">Line number</string>
    <string name="percents">Percents</string>
    <string name="containing_text">Containing text</string>
    <string name="whole_words">Whole words</string>
    <string name="case_sensitive">Case sensitive</string>
    <string name="file_mask">File mask</string>
    <string name="go_to">Go to</string>
    <string name="new_search">New search</string>
    <string name="invert_selection">Invert selection</string>
    <string name="search">Search</string>
    <string name="pattern">Pattern</string>
    <string name="replace_to">Replace to</string>
    <string name="bookmark_label">Bookmark label</string>
    <string name="create_bookmark">Create bookmark</string>
    <string name="bookmark_created">Bookmark created</string>
    <string name="progress">Progress</string>
    <string name="selected_files" formatted="false">%s in %d files</string>
    <string name="regular_expression">Regular expression</string>
    <string name="select_found">Select found</string>
    <string name="show_all">Show all</string>
    <string name="hide_all">Hide all</string>
    <string name="quick_view">Quick View</string>
    <string name="quick_view_contains">Contains:</string>
    <string name="quick_view_folder">Folder \"%s\"</string>
    <string name="quick_view_folders">Folders</string>
    <string name="quick_view_files">Files</string>
    <string name="quick_view_size">Files size</string>
    <string name="is_delimiter">IsDelimiter</string>
    <string name="file_system">File system</string>
    <string name="sdcard_root">Make Storage as root</string>
    <string name="sdcard_root_summary">Make Storage as parent folder of file system</string>
    <string name="hide_system_files">Hide system files</string>
    <string name="hide_system_files_summary">Hide system files in files list</string>
    <string name="file_system_sort">Sort files by</string>
    <string name="file_system_sort_summary">Specify files order rule</string>
    <string name="file_system_file_info">File Info</string>
    <string name="file_system_file_info_summary">Info to the right of file on main panel</string>
    <string name="folders_first">Show folders first</string>
    <string name="folders_first_summary">Push folders to the top of file list in current level</string>
    <string name="user_interface">User interface</string>
    <string name="settings_feedback">Feedback</string>
    <string name="send_email">Send email</string>
    <string name="send_email_summary">Send email directly to developer with your suggestions</string>
    <string name="rate_app">Rate application</string>
    <string name="rate_app_summary">Rate application and leave your comment on Google Play</string>
    <string name="multi_panels">Multi Panels</string>
    <string name="multi_panels_summary">Two panels interface</string>
    <string name="flexible_panels">Flexible Panels</string>
    <string name="flexible_panels_summary">Allow to expand/constrict panels.</string>
    <string name="home_folder">Home folder</string>
    <string name="enable_home_folder">Enable Home folder</string>
    <string name="enable_home_folder_summary">Enable to use Home folder option</string>
    <string name="home_folder_updated">Home directory updated.</string>
    <string name="main_panel_font_size">Main panel font size</string>
    <string name="main_panel_margin">Main panel cells margin</string>
    <string name="toolbar_font_size">Toolbar item font size</string>
    <string name="mime_type">Mime Type</string>
    <string name="file_name">Name</string>
    <string name="modified_date">Modified date</string>
    <string name="include_files">Include files</string>
    <string name="include_folders">Include folders</string>
</resources>