<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
             android:background="@color/main_grey"
             android:padding="5dp"
             android:layout_height="fill_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:paddingTop="40dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:background="@drawable/confirm_dialog_frame"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

        <TextView
                android:id="@+id/error"
                android:textColor="@color/error_red"
                android:visibility="gone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>

        <TableLayout
                android:id="@+id/details_folder"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:shrinkColumns="*"
                android:stretchColumns="*">
            <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">
                <TextView
                        android:textColor="@color/white"
                        android:text="@string/new_folder"/>
                <TextView
                        android:id="@+id/file_name"
                        android:textColor="@color/white"/>
            </TableRow>
            <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">
                <TextView
                        android:textColor="@color/white"
                        android:text="@string/quick_view_folders"/>
                <TextView
                        android:id="@+id/folders"
                        android:textColor="@color/white"/>
            </TableRow>
            <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">
                <TextView
                        android:textColor="@color/white"
                        android:text="@string/quick_view_files"/>
                <TextView
                        android:id="@+id/files"
                        android:textColor="@color/white"/>
            </TableRow>
            <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">
                <TextView
                        android:textColor="@color/white"
                        android:text="@string/quick_view_size"/>
                <TextView
                        android:id="@+id/size"
                        android:textColor="@color/white"/>
            </TableRow>

            <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">
                <TextView
                        android:textColor="@color/white"
                        android:text="@string/last_modified"/>
                <TextView
                        android:id="@+id/last_modified"
                        android:textColor="@color/white"/>
            </TableRow>

        </TableLayout>

        <TableLayout
                android:id="@+id/details_file"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:shrinkColumns="*"
                android:stretchColumns="*">
            <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">
                <TextView
                        android:textColor="@color/white"
                        android:text="@string/new_file"/>
                <TextView
                        android:id="@+id/file_name"
                        android:textColor="@color/white"/>
            </TableRow>
            <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">
                <TextView
                        android:textColor="@color/white"
                        android:text="@string/size"/>
                <TextView
                        android:id="@+id/size"
                        android:textColor="@color/white"/>
            </TableRow>

            <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">
                <TextView
                        android:textColor="@color/white"
                        android:text="@string/last_modified"/>
                <TextView
                        android:id="@+id/last_modified"
                        android:textColor="@color/white"/>
            </TableRow>

            <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">
                <TextView
                        android:textColor="@color/white"
                        android:text="@string/permissions"/>
                <TextView
                        android:id="@+id/permissions"
                        android:textColor="@color/white"/>
            </TableRow>

            <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">
                <TextView
                        android:textColor="@color/white"
                        android:text="@string/mime_type"/>
                <TextView
                        android:id="@+id/mime_type"
                        android:textColor="@color/white"/>
            </TableRow>

        </TableLayout>


        <ProgressBar
                android:id="@+id/loading"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:indeterminate="true"
                style="@android:style/Widget.Holo.Light.ProgressBar.Horizontal"/>


        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_marginTop="30dp"
                android:layout_height="wrap_content">

            <Button
                    android:id="@+id/ok"
                    android:text="@string/btn_ok"
                    style="@style/dialog_button"
                    android:layout_weight="0.5"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"/>
<!--
            <Button
                    android:id="@+id/cancel"
                    android:text="@string/btn_cancel"
                    style="@style/dialog_button"
                    android:layout_weight="0.5"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"/>
-->
        </LinearLayout>

    </LinearLayout>

    <TextView
            android:text="@string/information"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="16dp"
            android:textColor="@color/white"
            android:ellipsize="middle"
            android:background="@color/main_grey"
            android:layout_gravity="center_horizontal"/>

</FrameLayout>