<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
             android:background="@color/main_grey"
             android:padding="5dp"
             android:layout_height="fill_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:paddingTop="40dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:background="@drawable/confirm_dialog_frame"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

        <EditText
                android:id="@+id/go_to"
                android:background="@color/selected_item"
                android:inputType="number"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>


        <RadioGroup
                    android:layout_width="wrap_content"
                    android:id="@+id/go_to_type"
                    android:layout_height="wrap_content">

            <RadioButton android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:id="@+id/line_number"
                         android:checked="true"
                         android:button="@drawable/radio_selector"
                         android:text="@string/line_number">
            </RadioButton>

            <RadioButton android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:id="@+id/percents"
                         android:button="@drawable/radio_selector"
                         android:text="@string/percents">
            </RadioButton>
        </RadioGroup>


        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_marginTop="30dp"
                android:layout_height="wrap_content">

            <Button
                    android:id="@+id/ok"
                    android:text="@string/btn_ok"
                    style="@style/dialog_button"
                    android:layout_weight="0.5"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"/>

            <Button
                    android:id="@+id/cancel"
                    android:text="@string/btn_cancel"
                    style="@style/dialog_button"
                    android:layout_weight="0.5"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"/>

        </LinearLayout>
    </LinearLayout>

    <TextView
            android:text="@string/btn_goto"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="16dp"
            android:textColor="@color/white"
            android:ellipsize="middle"
            android:background="@color/main_grey"
            android:layout_gravity="center_horizontal"/>

</FrameLayout>