<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:background="@color/main_grey"
        >

    <TextView
            android:text="@string/action_open_with"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:textSize="18dp"
            android:paddingLeft="40dp"
            android:paddingTop="20dp"
            android:layout_height="wrap_content"
            />

    <ListView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:overScrollMode="never"
            android:fadingEdge="none"
            android:cacheColorHint="@color/transparent"
            android:padding="20dp"
            android:id="@+id/applications_list"
            />

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content">

        <Button
                android:id="@+id/open_as"
                android:text="@string/action_open_as"
                style="@style/dialog_button"
                android:layout_weight="0.5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>

        <Button
                android:id="@+id/cancel"
                android:text="@string/btn_cancel"
                style="@style/dialog_button"
                android:layout_weight="0.5"
                android:layout_marginRight="10dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>